fix bug horizontal scrolling of the tiles on the desctop and tablet devices

--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -1,5 +1,5 @@
 .circle__svg {
-    z-index: 10;
+    z-index: 100;
     animation: animate 6s linear infinite;
     position: absolute;
     top: 0;
